[gd_scene load_steps=5 format=3 uid="uid://cjv4bpiuvnrps"]

[ext_resource type="Script" path="res://lb4-1.gd" id="1_r7hgb"]
[ext_resource type="Script" path="res://lblout.gd" id="2_msni8"]

[sub_resource type="LabelSettings" id="LabelSettings_hf8k2"]
font_size = 35

[sub_resource type="Theme" id="Theme_q0qlq"]
default_font_size = 29

[node name="lb4-1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r7hgb")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 25.0
offset_right = 450.0
offset_bottom = 113.0
text = "Enter Number of Copies"
label_settings = SubResource("LabelSettings_hf8k2")
vertical_alignment = 1

[node name="lblout" type="Label" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 174.0
offset_right = 954.0
offset_bottom = 441.0
label_settings = SubResource("LabelSettings_hf8k2")
vertical_alignment = 1
script = ExtResource("2_msni8")

[node name="txtcopies" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 464.0
offset_top = 18.0
offset_right = 788.0
offset_bottom = 117.0

[node name="btncalc" type="Button" parent="."]
modulate = Color(0.298039, 1, 0, 1)
layout_mode = 0
offset_left = 166.0
offset_top = 528.0
offset_right = 380.0
offset_bottom = 624.0
theme = SubResource("Theme_q0qlq")
text = "Calculate"

[node name="btnexit" type="Button" parent="."]
modulate = Color(1, 0, 0.0156863, 1)
layout_mode = 0
offset_left = 927.0
offset_top = 538.0
offset_right = 1141.0
offset_bottom = 634.0
theme = SubResource("Theme_q0qlq")
text = "Exit"

[node name="btnclear" type="Button" parent="."]
modulate = Color(0, 0.984314, 1, 1)
layout_mode = 0
offset_left = 453.0
offset_top = 525.0
offset_right = 667.0
offset_bottom = 621.0
theme = SubResource("Theme_q0qlq")
text = "Clear"

[connection signal="pressed" from="btncalc" to="." method="_on_btncalc_pressed"]
[connection signal="pressed" from="btnexit" to="." method="_on_btnexit_pressed"]
[connection signal="pressed" from="btnclear" to="." method="_on_btnclear_pressed"]
